aws/eks/namespace.yaml
---
# namespace to isolate Rubens Kubernetes resources within the cluster
apiVersion: v1
kind: Namespace
metadata:
  name: kube-playground
