aws/eks/deployment.yaml
---
# ==================== >>> Deployment <<< =====================================
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: rubens-playground-cluster
  name: deployment-helloworld-ms
  labels:
    app: helloworld-ms
spec:
  selector:
    matchLabels:
      app: helloworld-ms
  replicas: 2
  template:
    metadata:
      labels:
        app: helloworld-ms
    spec:
      containers:
        - name: container-helloworld-ms
          # the image URI in the private ECR registry
          image: 347851559421.dkr.ecr.us-east-1.amazonaws.com/rubensgomes/helloworld-ms:latest
          imagePullPolicy: Always
          resources:
            requests:
              # same as 0.25 or 25% of cpu quota requested (maps to docker --cpu-quota)
              cpu: 250m
              # minimum amount of memory guaranteed to container (NOT found in docker)
              memory: 100Mi
            limits:
              # 0.5 percent of cpu period requested (maps to docker --cpu-period)
              cpu: 500m
              # max amount of memory container can use (maps to docker --memory)
              memory: 200Mi
          ports:
            # container port must be the Spring Boot app default: 8080
            - containerPort: 8080
      nodeSelector:
        # if both windows and linux found in cluse, always use linux nodes
        kubernetes.io/os: linux
      imagePullSecrets:
        # The name of previously created Kubernetes secret to access
        # Rubens AWS ECR private registry
        - name: secret/rubens-aws-secret
