aws/eks/ingress.yaml
---
# ==================== >>> Ingress <<< ========================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: rubens-playground-cluster
  name: ingress-helloworld-ms
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-helloworld-ms
                port:
                  number: 80
